--- a/src/popup/styles/popup.scss
+++ b/src/popup/styles/popup.scss
@@ -7,20 +7,15 @@
   
 }
 
-main {
-  width: 100%;
-  height: 100%;
-}
-
 * {
   box-sizing: border-box;
 }
 
 html {
   background: none;
-  width: 400px;
+  /* width: 400px; */
   font-size: 16px;
-  color: #fff;
+  /* color: #fff; */
 }
 
 body, #root {
